--- a/guardias_aldaia.html
+++ b/guardias_aldaia.html
@@ -1,3 +1,32 @@
+  @media (max-width: 420px) {
+    .months {
+      width:100%;
+      max-width:100vw;
+      padding:0 0.5vw;
+    }
+    .month {
+      padding:2px;
+    }
+    .grid {
+      gap:1px;
+      padding:1px;
+    }
+    .cell {
+      min-height:24px;
+      font-size:0.62rem;
+      padding:2px;
+    }
+    .month h3 {
+      font-size:0.82rem;
+    }
+    .tag {
+      font-size:0.78rem;
+      padding:2px 4px;
+    }
+    .date {
+      font-size:0.7rem;
+    }
+  }
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -154,7 +183,7 @@
 const MEDICOS = [
   { nombre: "Adela",  mes: 8 },
   { nombre: "Rigo",   mes: 8 },
-  { nombre: "Merino", mes: 8 },
+  { nombre: "Merino", mes: 4 },
   { nombre: "Mica",   mes: 4 },
   { nombre: "Naby",   mes: 4 },
   { nombre: "Estrella", mes: 4 },
