--- a/guardias_aldaia.html
+++ b/guardias_aldaia.html
@@ -1,32 +1,3 @@
-  @media (max-width: 420px) {
-    .months {
-      width:100%;
-      max-width:100vw;
-      padding:0 0.5vw;
-    }
-    .month {
-      padding:2px;
-    }
-    .grid {
-      gap:1px;
-      padding:1px;
-    }
-    .cell {
-      min-height:24px;
-      font-size:0.62rem;
-      padding:2px;
-    }
-    .month h3 {
-      font-size:0.82rem;
-    }
-    .tag {
-      font-size:0.78rem;
-      padding:2px 4px;
-    }
-    .date {
-      font-size:0.7rem;
-    }
-  }
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -96,6 +67,35 @@
     }
     .month h3 {
       font-size:0.92rem;
+    }
+  }
+  @media (max-width: 420px) {
+    .months {
+      width:100%;
+      max-width:100vw;
+      padding:0 0.5vw;
+    }
+    .month {
+      padding:2px;
+    }
+    .grid {
+      gap:1px;
+      padding:1px;
+    }
+    .cell {
+      min-height:24px;
+      font-size:0.62rem;
+      padding:2px;
+    }
+    .month h3 {
+      font-size:0.82rem;
+    }
+    .tag {
+      font-size:0.78rem;
+      padding:2px 4px;
+    }
+    .date {
+      font-size:0.7rem;
     }
   }
   .month{width:100%;background:#fff;border-radius:10px;padding:18px;box-shadow:0 6px 18px rgba(0,0,0,0.04);min-width:0;}
@@ -185,13 +185,13 @@ const MEDICOS = [
   { nombre: "Rigo",   mes: 8 },
   { nombre: "Merino", mes: 4 },
   { nombre: "Mica",   mes: 4 },
-  { nombre: "Naby",   mes: 4 },
+  { nombre: "Naby",   mes: 2 },
   { nombre: "Estrella", mes: 4 },
   { nombre: "Amparo", mes: 4 },
   { nombre: "Sara",   mes: 4 },
   { nombre: "Luceth", mes: 4 },
-  { nombre: "Salva",  mes: 3 },
-  { nombre: "Brian",  mes: 2 },
+  { nombre: "Salva",  mes: 2 },
+  { nombre: "Brian",  mes: 4 },
   { nombre: "Marta",  mes: 2 },
   { nombre: "Julia",  mes: 2 },
   { nombre: "Pepe",   mes: 2 },
@@ -420,7 +420,9 @@ function generarAsignacion(){
 function renderDoctors(){
   const host = document.getElementById('doctorsList');
   host.innerHTML='';
-  MEDICOS.forEach((m, idx)=>{
+  // Ordena por número de guardias descendente
+  const medicosOrdenados = [...MEDICOS].sort((a,b)=>b.mes-a.mes);
+  medicosOrdenados.forEach((m, idx)=>{
     const div=document.createElement('div'); div.className='pill';
     const sw=document.createElement('span'); sw.className='sw'; sw.style.background=color[m.nombre];
     const txt=document.createElement('span'); txt.textContent=m.nombre;
@@ -473,7 +475,9 @@ function renderCalendario(asig){
 
   // resumen table
   const tb=document.getElementById('resumenBody'); tb.innerHTML='';
-  MEDICOS.forEach(m=>{
+  // Ordena por número de guardias descendente
+  const medicosOrdenados = [...MEDICOS].sort((a,b)=>b.mes-a.mes);
+  medicosOrdenados.forEach(m=>{
     const r=res[m.nombre];
     const tr=document.createElement('tr');
     tr.innerHTML=`<td style="background:${color[m.nombre]}">${m.nombre}</td>
