--- a/guadias_aldaia_rueda_estricta.html
+++ b/guadias_aldaia_rueda_estricta.html
@@ -1,3 +1,4 @@
+<!-- /index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -26,77 +27,27 @@
     transition:width 0.2s;
   }
   @media (max-width: 900px) {
-    .months {
-      width:98%;
-      max-width:100vw;
-      padding:0 2vw;
-    }
-    .month {
-      padding:8px;
-    }
-    .grid {
-      gap:4px;
-      padding:4px;
-    }
-    .cell {
-      min-height:44px;
-      font-size:0.78rem;
-      padding:5px;
-    }
-    .month h3 {
-      font-size:1rem;
-    }
+    .months { width:98%; max-width:100vw; padding:0 2vw; }
+    .month { padding:8px; }
+    .grid { gap:4px; padding:4px; }
+    .cell { min-height:44px; font-size:0.78rem; padding:5px; }
+    .month h3 { font-size:1rem; }
   }
   @media (max-width: 520px) {
-    .months {
-      width:100%;
-      max-width:100vw;
-      padding:0 1vw;
-    }
-    .month {
-      padding:4px;
-    }
-    .grid {
-      gap:2px;
-      padding:2px;
-    }
-    .cell {
-      min-height:32px;
-      font-size:0.72rem;
-      padding:3px;
-    }
-    .month h3 {
-      font-size:0.92rem;
-    }
+    .months { width:100%; max-width:100vw; padding:0 1vw; }
+    .month { padding:4px; }
+    .grid { gap:2px; padding:2px; }
+    .cell { min-height:32px; font-size:0.72rem; padding:3px; }
+    .month h3 { font-size:0.92rem; }
   }
   @media (max-width: 420px) {
-    .months {
-      width:100%;
-      max-width:100vw;
-      padding:0 0.5vw;
-    }
-    .month {
-      padding:2px;
-    }
-    .grid {
-      gap:1px;
-      padding:1px;
-    }
-    .cell {
-      min-height:24px;
-      font-size:0.62rem;
-      padding:2px;
-    }
-    .month h3 {
-      font-size:0.82rem;
-    }
-    .tag {
-      font-size:0.78rem;
-      padding:2px 4px;
-    }
-    .date {
-      font-size:0.7rem;
-    }
+    .months { width:100%; max-width:100vw; padding:0 0.5vw; }
+    .month { padding:2px; }
+    .grid { gap:1px; padding:1px; }
+    .cell { min-height:24px; font-size:0.62rem; padding:2px; }
+    .month h3 { font-size:0.82rem; }
+    .tag { font-size:0.78rem; padding:2px 4px; }
+    .date { font-size:0.7rem; }
   }
   .month{width:100%;background:#fff;border-radius:10px;padding:18px;box-shadow:0 6px 18px rgba(0,0,0,0.04);min-width:0;}
   @media(max-width:900px){ .months{grid-template-columns:1fr;} .month{padding:8px;} }
@@ -104,17 +55,11 @@
   .grid{display:grid;grid-template-columns:repeat(7,1fr);gap:10px;background:#ddd;padding:10px;border-radius:12px;width:100%;min-width:0;}
   .cell{background:#fff;min-height:60px;font-size:0.85rem;padding:8px;display:flex;flex-direction:column;align-items:flex-start;border-radius:8px;transition:border 0.2s;}
   .cell.empty{background:transparent;min-height:36px;border:none}
-  .cell.type-festivo{background:#ffecec !important;border:4px solid #e74c3c !important;border-radius:12px !important;box-shadow:0 0 0 2px #e74c3c44;}
-  .cell.type-festivo .date{color:#b00;font-weight:700;}
+  /* Borde rojo para festivos */
+  .cell.festivo{background:#ffecec !important;border:4px solid #e74c3c !important;border-radius:12px !important;box-shadow:0 0 0 2px #e74c3c44;}
+  .cell.festivo .date{color:#b00;font-weight:700;}
   .date{font-weight:700;margin-bottom:6px}
-  .tag{
-    display:inline-block;
-    padding:3px 6px;
-    border-radius:8px;
-    margin:3px 0;
-    font-size:0.92rem;
-    font-weight:500;
-  }
+  .tag{display:inline-block;padding:3px 6px;border-radius:8px;margin:3px 0;font-size:0.92rem;font-weight:500}
   table{width:100%;border-collapse:collapse}
   th,td{border:1px solid #eee;padding:6px;text-align:center;font-size:0.82rem}
   th{background:#fafafa}
@@ -124,6 +69,11 @@
   .pref{background:#e6f4ff}
   .sabado{background:#fff8f0}
   .domingo{background:#f0f0f0}
+  /* Resumen mensual compacto */
+  .month-summary{margin-top:10px}
+  .month-summary h4{margin:8px 0 6px;font-size:0.95rem;text-align:left}
+  .month-summary table{font-size:0.78rem}
+  .month-summary td:first-child{text-align:left}
 </style>
 </head>
 <body>
@@ -197,7 +147,7 @@ const MEDICOS = [
   { nombre: "Pepe",   mes: 2 },
   { nombre: "Wendy",  mes: 2 },
   { nombre: "Lerma",  mes: 2 },
-  { nombre: "Silvia", mes: 2 } // ahora 2/mes
+  { nombre: "Silvia", mes: 2 }
 ];
 const PASTEL = ["#FFB3BA","#FFDFBA","#FFFFBA","#BAFFC9","#BAE1FF","#D7BAFF","#FFC8DD","#BFD8B8","#FFDAC1","#E2F0CB","#FF9CEE","#F0C9FF","#B5EAD7","#C7CEEA","#FFCCF9","#C2F0FC"];
 const color = {}; MEDICOS.forEach((m,i)=> color[m.nombre]=PASTEL[i%PASTEL.length]);
@@ -260,153 +210,135 @@ function intervaloPorMes(guardiasMes){
   if(guardiasMes===4) return 8;
   if(guardiasMes===3) return 10;
   if(guardiasMes===2) return 15;
-  if(guardiasMes<=1) return 30; // Silvia
-  // fallback
+  if(guardiasMes<=1) return 30; // Silvia (o quien tenga 1)
   return Math.max(3, Math.round(30/guardiasMes));
 }
 
 function generarAsignacion(){
-  const asig = {}; // iso -> [nombres...]
-  // estado por médico
-  const last = {};     // última fecha asignada
-  const monthCount = {}; // isoMonth 'YYYY-MM' -> { medico:count }
-  const tipoCount = {};  // equilibrio por tipos (sab/fest/pref/puente) y dom
-  MEDICOS.forEach(m=>{
-    last[m.nombre]=null;
-    tipoCount[m.nombre]={sab:0,fest:0,pref:0,puente:0,dom:0};
-  });
+  const asig = {}; // iso -> [nombres...]
+  const last = {};     // última fecha asignada
+  const monthCount = {}; // isoMonth 'YYYY-MM' -> { medico:count }
+  const tipoCount = {};  // equilibrio por tipos
+  MEDICOS.forEach(m=>{
+    last[m.nombre]=null;
+    tipoCount[m.nombre]={sab:0,fest:0,pref:0,puente:0,dom:0};
+  });
 
-  // helpers
-  function canUse(name, dt, guardiasMes){
-    // no consecutivos
-    const L = last[name];
-    if(L){
-      const diff = Math.round((dt - L)/(1000*3600*24));
-      if(diff <= 1) return false; // nunca día siguiente
-      const need = intervaloPorMes(guardiasMes);
-      if(diff < need) return false; // respeta intervalo
-    }
-    // Silvia: respeta el parámetro editable
-    if(name==='Silvia'){
-      const ym = ymd(dt).slice(0,7);
-      monthCount[ym]=monthCount[ym]||{};
-      const max = MEDICOS.find(m=>m.nombre==='Silvia').mes;
-      if((monthCount[ym][name]||0) >= max) return false;
-    }
-    return true;
-  }
+  function canUse(name, dt, guardiasMes){
+    const L = last[name];
+    if(L){
+      const diff = Math.round((dt - L)/(1000*3600*24));
+      if(diff <= 1) return false; // nunca dos seguidos
+      const need = intervaloPorMes(guardiasMes);
+      if(diff < need) return false;
+    }
+    if(name==='Silvia'){
+      const ym = ymd(dt).slice(0,7);
+      monthCount[ym]=monthCount[ym]||{};
+      const max = MEDICOS.find(m=>m.nombre==='Silvia').mes;
+      if((monthCount[ym][name]||0) >= max) return false;
+    }
+    return true;
+  }
 
-  function penalizacionTipo(name, cell){
-    // Menor es mejor → favorece a quien tenga menos de ese tipo
-    let p = 0;
-    if(cell.sab) p += tipoCount[name].sab * 3;
-    if(cell.fest) p += tipoCount[name].fest * 4;
-    if(cell.pref) p += tipoCount[name].pref * 2;
-    if(cell.puente) p += tipoCount[name].puente * 2;
-    if(cell.dom) p += tipoCount[name].dom * 2;
-    return p;
-  }
+  function penalizacionTipo(name, cell){
+    let p = 0;
+    if(cell.sab) p += tipoCount[name].sab * 3;
+    if(cell.fest) p += tipoCount[name].fest * 4;
+    if(cell.pref) p += tipoCount[name].pref * 2;
+    if(cell.puente) p += tipoCount[name].puente * 2;
+    if(cell.dom) p += tipoCount[name].dom * 2;
+    return p;
+  }
 
-  // recorrido cronológico
-  months.forEach(mon=>{
-    mon.days.forEach(cell=>{
-      if(cell.empty) return;
-      asig[cell.iso] = [];
-      // lista de elegibles por intervalo
-      const elegibles = MEDICOS.filter(m=> canUse(m.nombre, cell.date, m.mes));
+  months.forEach(mon=>{
+    mon.days.forEach(cell=>{
+      if(cell.empty) return;
+      asig[cell.iso] = [];
+      const elegibles = MEDICOS.filter(m=> canUse(m.nombre, cell.date, m.mes));
 
-      // 1) Intentar emparejamientos preferidos
-      function intentarPar(a,b){
-        const A = elegibles.find(x=>x.nombre===a);
-        const B = elegibles.find(x=>x.nombre===b);
-        if(A && B){
-          asig[cell.iso].push(a,b);
-          last[a]=new Date(cell.date);
-          last[b]=new Date(cell.date);
-          const ym = cell.iso.slice(0,7);
-          monthCount[ym]=monthCount[ym]||{};
-          monthCount[ym][a]=(monthCount[ym][a]||0)+1;
-          monthCount[ym][b]=(monthCount[ym][b]||0)+1;
-          // tipos
-          if(cell.sab){tipoCount[a].sab++;tipoCount[b].sab++}
-          if(cell.fest){tipoCount[a].fest++;tipoCount[b].fest++}
-          if(cell.pref){tipoCount[a].pref++;tipoCount[b].pref++}
-          if(cell.puente){tipoCount[a].puente++;tipoCount[b].puente++}
-          if(cell.dom){tipoCount[a].dom++;tipoCount[b].dom++}
-          return true;
-        }
-        return false;
-      }
-      if(asig[cell.iso].length<2){
-        // prefer Rigo–Luceth
-        if(intentarPar('Rigo','Luceth')===false){
-          // prefer Adela–Mica
-          intentarPar('Adela','Mica');
-        }
-      }
+      function intentarPar(a,b){
+        const A = elegibles.find(x=>x.nombre===a);
+        const B = elegibles.find(x=>x.nombre===b);
+        if(A && B){
+          asig[cell.iso].push(a,b);
+          last[a]=new Date(cell.date);
+          last[b]=new Date(cell.date);
+          const ym = cell.iso.slice(0,7);
+          monthCount[ym]=monthCount[ym]||{};
+          monthCount[ym][a]=(monthCount[ym][a]||0)+1;
+          monthCount[ym][b]=(monthCount[ym][b]||0)+1;
+          if(cell.sab){tipoCount[a].sab++;tipoCount[b].sab++}
+          if(cell.fest){tipoCount[a].fest++;tipoCount[b].fest++}
+          if(cell.pref){tipoCount[a].pref++;tipoCount[b].pref++}
+          if(cell.puente){tipoCount[a].puente++;tipoCount[b].puente++}
+          if(cell.dom){tipoCount[a].dom++;tipoCount[b].dom++}
+          return true;
+        }
+        return false;
+      }
 
-      // 2) Rellenar hasta 2 con mejor “score”:
-      if(asig[cell.iso].length<2){
-        // candidatos disponibles (sin los ya puestos)
-        const cands = MEDICOS
-          .filter(m=> !asig[cell.iso].includes(m.nombre) && canUse(m.nombre, cell.date, m.mes))
-          .map(m=>{
-            // score: prioridad por grupo (más alta frecuencia primero) pero ajustado por penalización de tipos
-            const base = (m.mes>=8)?0 : (m.mes===4?1 : (m.mes===3?2 : (m.mes===2?3:4)));
-            const pen = penalizacionTipo(m.nombre, cell);
-            return {m, score: base*100 + pen}; // base pesa más que pen
-          })
-          .sort((a,b)=> a.score - b.score);
+      if(asig[cell.iso].length<2){
+        if(intentarPar('Rigo','Luceth')===false){ intentarPar('Adela','Mica'); }
+      }
 
-        while(asig[cell.iso].length<2 && cands.length){
-          const pick = cands.shift().m;
-          asig[cell.iso].push(pick.nombre);
-          last[pick.nombre]=new Date(cell.date);
-          const ym = cell.iso.slice(0,7);
-          monthCount[ym]=monthCount[ym]||{};
-          monthCount[ym][pick.nombre]=(monthCount[ym][pick.nombre]||0)+1;
-          if(cell.sab) tipoCount[pick.nombre].sab++;
-          if(cell.fest) tipoCount[pick.nombre].fest++;
-          if(cell.pref) tipoCount[pick.nombre].pref++;
-          if(cell.puente) tipoCount[pick.nombre].puente++;
-          if(cell.dom) tipoCount[pick.nombre].dom++;
-        }
-      }
+      if(asig[cell.iso].length<2){
+        const cands = MEDICOS
+          .filter(m=> !asig[cell.iso].includes(m.nombre) && canUse(m.nombre, cell.date, m.mes))
+          .map(m=>{
+            const base = (m.mes>=8)?0 : (m.mes===4?1 : (m.mes===3?2 : (m.mes===2?3:4)));
+            const pen = penalizacionTipo(m.nombre, cell);
+            return {m, score: base*100 + pen};
+          })
+          .sort((a,b)=> a.score - b.score);
 
-      // 3) Rellenar solo con médicos de 2 guardias
-      if(asig[cell.iso].length<2){
-        const flex = MEDICOS
-          .filter(m=>{
-            if(asig[cell.iso].includes(m.nombre)) return false;
-            if(m.mes !== 2) return false; // <<-- Cambio clave: solo de 2 guardias
-            // no consecutivo
-            const L = last[m.nombre];
-            if(L){
-              const diff = Math.round((cell.date - L)/(1000*3600*24));
-              if(diff<=1) return false;
-            }
-            return true;
-          })
-          .map(m=>({m, score: penalizacionTipo(m.nombre, cell)}))
-          .sort((a,b)=> a.score - b.score);
-        while(asig[cell.iso].length<2 && flex.length){
-          const pick = flex.shift().m;
-          asig[cell.iso].push(pick.nombre);
-          last[pick.nombre]=new Date(cell.date);
-          const ym = cell.iso.slice(0,7);
-          monthCount[ym]=monthCount[ym]||{};
-          monthCount[ym][pick.nombre]=(monthCount[ym][pick.nombre]||0)+1;
-          if(cell.sab) tipoCount[pick.nombre].sab++;
-          if(cell.fest) tipoCount[pick.nombre].fest++;
-          if(cell.pref) tipoCount[pick.nombre].pref++;
-          if(cell.puente) tipoCount[pick.nombre].puente++;
-          if(cell.dom) tipoCount[pick.nombre].dom++;
-        }
-      }
-    });
-  });
+        while(asig[cell.iso].length<2 && cands.length){
+          const pick = cands.shift().m;
+          asig[cell.iso].push(pick.nombre);
+          last[pick.nombre]=new Date(cell.date);
+          const ym = cell.iso.slice(0,7);
+          monthCount[ym]=monthCount[ym]||{};
+          monthCount[ym][pick.nombre]=(monthCount[ym][pick.nombre]||0)+1;
+          if(cell.sab) tipoCount[pick.nombre].sab++;
+          if(cell.fest) tipoCount[pick.nombre].fest++;
+          if(cell.pref) tipoCount[pick.nombre].pref++;
+          if(cell.puente) tipoCount[pick.nombre].puente++;
+          if(cell.dom) tipoCount[pick.nombre].dom++;
+        }
+      }
 
-  return asig;
+      if(asig[cell.iso].length<2){
+        const flex = MEDICOS
+          .filter(m=>{
+            if(asig[cell.iso].includes(m.nombre)) return false;
+            if(m.mes !== 2) return false; // sólo de 2 guardias
+            const L = last[m.nombre];
+            if(L){
+              const diff = Math.round((cell.date - L)/(1000*3600*24));
+              if(diff<=1) return false;
+            }
+            return true;
+          })
+          .map(m=>({m, score: penalizacionTipo(m.nombre, cell)}))
+          .sort((a,b)=> a.score - b.score);
+        while(asig[cell.iso].length<2 && flex.length){
+          const pick = flex.shift().m;
+          asig[cell.iso].push(pick.nombre);
+          last[pick.nombre]=new Date(cell.date);
+          const ym = cell.iso.slice(0,7);
+          monthCount[ym]=monthCount[ym]||{};
+          monthCount[ym][pick.nombre]=(monthCount[ym][pick.nombre]||0)+1;
+          if(cell.sab) tipoCount[pick.nombre].sab++;
+          if(cell.fest) tipoCount[pick.nombre].fest++;
+          if(cell.pref) tipoCount[pick.nombre].pref++;
+          if(cell.puente) tipoCount[pick.nombre].puente++;
+          if(cell.dom) tipoCount[pick.nombre].dom++;
+        }
+      }
+    });
+  });
+
+  return asig;
 }
 
 /* =========================
@@ -415,9 +347,8 @@ function generarAsignacion(){
 function renderDoctors(){
   const host = document.getElementById('doctorsList');
   host.innerHTML='';
-  // Ordena por número de guardias descendente
   const medicosOrdenados = [...MEDICOS].sort((a,b)=>b.mes-a.mes);
-  medicosOrdenados.forEach((m, idx)=>{
+  medicosOrdenados.forEach((m)=>{
     const div=document.createElement('div'); div.className='pill';
     const sw=document.createElement('span'); sw.className='sw'; sw.style.background=color[m.nombre];
     const txt=document.createElement('span'); txt.textContent=m.nombre;
@@ -438,18 +369,26 @@ function renderCalendario(asig){
   monthsEl.innerHTML='';
   const meses=['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'];
 
-  // resumen contadores
+  // resumen global
   const res={}; MEDICOS.forEach(m=> res[m.nombre]={tot:0,sab:0,dom:0,fest:0,pref:0,puente:0});
 
   months.forEach(mon=>{
     const box=document.createElement('div'); box.className='month';
     const h=document.createElement('h3'); h.textContent=`${meses[mon.month]} ${mon.year}`; box.appendChild(h);
+
+    // acumulador mensual
+    const monthTotals={}; MEDICOS.forEach(m=> monthTotals[m.nombre]=0);
+
     const grid=document.createElement('div'); grid.className='grid';
     ['L','M','X','J','V','S','D'].forEach(t=>{const hd=document.createElement('div');hd.className='cell';hd.style.fontWeight='700';hd.style.textAlign='center';hd.textContent=t;grid.appendChild(hd);});
+
     mon.days.forEach(cell=>{
       const c=document.createElement('div'); c.className='cell';
       if(cell.empty){ c.classList.add('empty'); grid.appendChild(c); return; }
-      if(cell.fest) c.classList.add('festivo'); else if(cell.pref) c.classList.add('pref');
+
+      // clases de estilo
+      if(cell.fest) c.classList.add('festivo');
+      else if(cell.pref) c.classList.add('pref');
       else if(cell.puente) c.classList.add('puente');
       if(cell.sab) c.classList.add('sabado');
       if(cell.dom) c.classList.add('domingo');
@@ -459,18 +398,47 @@ function renderCalendario(asig){
       (asig[cell.iso]||[]).forEach(n=>{
         const t=document.createElement('div'); t.className='tag'; t.style.background=color[n]; t.textContent=n;
         c.appendChild(t);
+        // global
         res[n].tot++; if(cell.sab)res[n].sab++; if(cell.dom)res[n].dom++; if(cell.fest)res[n].fest++; if(cell.pref)res[n].pref++; if(cell.puente)res[n].puente++;
+        // mensual
+        monthTotals[n]++;
       });
 
       grid.appendChild(c);
     });
+
     box.appendChild(grid);
+
+    // resumen mensual debajo del mes
+    const sum=document.createElement('div'); sum.className='month-summary';
+    const totalMes = Object.values(monthTotals).reduce((a,b)=>a+b,0);
+    const h4=document.createElement('h4'); h4.textContent=`Resumen del mes — Total guardias: ${totalMes}`; sum.appendChild(h4);
+
+    const tabla=document.createElement('table');
+    const thead=document.createElement('thead');
+    thead.innerHTML='<tr><th style="text-align:left">Médico</th><th>Total (mes)</th></tr>';
+    tabla.appendChild(thead);
+    const tbody=document.createElement('tbody');
+
+    const filas = Object.keys(monthTotals)
+      .map(n=>({n, c:monthTotals[n]}))
+      .sort((a,b)=> b.c - a.c || a.n.localeCompare(b.n));
+
+    filas.forEach(({n,c})=>{
+      const tr=document.createElement('tr');
+      tr.innerHTML=`<td style="background:${color[n]}">${n}</td><td>${c}</td>`;
+      tbody.appendChild(tr);
+    });
+
+    tabla.appendChild(tbody);
+    sum.appendChild(tabla);
+    box.appendChild(sum);
+
     monthsEl.appendChild(box);
   });
 
-  // resumen table
+  // resumen global (periodo)
   const tb=document.getElementById('resumenBody'); tb.innerHTML='';
-  // Ordena por número de guardias descendente
   const medicosOrdenados = [...MEDICOS].sort((a,b)=>b.mes-a.mes);
   medicosOrdenados.forEach(m=>{
     const r=res[m.nombre];
@@ -486,21 +454,22 @@ function renderCalendario(asig){
    ================ */
 buildMonths();
 renderDoctors();
+
 document.getElementById('btnGenerar').addEventListener('click', ()=>{
-  // Actualiza los valores de guardias/mes desde los inputs ANTES de generar
+  // sincroniza entradas
   const pills = document.querySelectorAll('#doctorsList .pill');
   pills.forEach((div, idx) => {
     const input = div.querySelector('input[type="number"]');
     const val = Math.max(1,parseInt(input.value)||1);
     MEDICOS[idx].mes = val;
   });
-  // Recalcula todo
   buildMonths();
   const asig = generarAsignacion();
   renderCalendario(asig);
 });
+
 // Autogenerar en carga para ver algo
-document.getElementById('btnGenerar').click();
+setTimeout(()=>document.getElementById('btnGenerar').click());
 </script>
 </body>
 </html>
